r5 =====================================================================
* переделан и исправлен конструктор класса GradSender: параметры теперь
  передаются как словарь **kwargs, аналогично конструкторам прочих
  классов модуля
- исправлена ошибка в методе GradSender.__DMX_send_frame()
* функция unwrap_values() переделана в grad_values_to_array() и теперь
  возвращает массив байтов
* изменён класс ImageGradGen:
  + добавлено поле класса DEFAULT_CHANNELS
  - исправлен конструктор
* демонстрационная программа olatest.py:
  * переименована в example.py
  * переписана в б/м нормальный пример вместо чорт знает чего
  + добавлены изображения в качестве источников для градиентов

r4 =====================================================================
* изменен класс LineGradGen: удалёно поле fadeout, вместо него начальное
  и конечное значения задаются явно полями channelsFrom/channelsTo,
  содержащими кортежи для начальных и конечных значений многоканального
  градиента
+ добавлено правило "help" в Makefile

r3 =====================================================================
+ убраны методы GradGen.get_current_value() и переработан алгоритм
  генерации новых значений
+ добавлен режим GradPosition.RANDOM
+ добавлен класс SequenceGenGradGen

r1-r2 ==================================================================
! первый блин