@@ -3,6 +3,9 @@ r5 =====================================================================
   передаются как словарь **kwargs, аналогично конструкторам прочих
   классов модуля
 - исправлена ошибка в методе GradSender.__DMX_send_frame()
+- исправлен класс GenGradGen, теперь нет необходимости вызывать его
+  метод reset() после добавления вложенных генераторов вызовами
+  метода add_subgen()
 * функция unwrap_values() переделана в grad_values_to_array() и теперь
   возвращает массив байтов
 * изменён класс ImageGradGen:
